- add: Timestop spell.

--- a/Resources/Prototypes/_White/Entities/Effects/timestop.yml
+++ b/Resources/Prototypes/_White/Entities/Effects/timestop.yml
@@ -18,7 +18,10 @@
         mask:
         - None
         layer:
+        - Impassable
+        - HighImpassable
         - MidImpassable
+        - LowImpassable
         - Opaque
         - BulletImpassable
   - type: Physics
