add: small light to multitool

--- a/Resources/Prototypes/Entities/Objects/Tools/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/tools.yml
@@ -272,6 +272,10 @@
       Plastic: 100
   - type: StaticPrice
     price: 56
+  - type: PointLight
+    color: "#7FC080"
+    radius: 1.05
+    energy: 0.3
 
 - type: entity
   name: network configurator
@@ -395,13 +399,13 @@
   description: The rapid construction device can be used to quickly place and remove various station structures and fixtures. Requires compressed matter to function.
   components:
   - type: RCD
-    availablePrototypes:   
+    availablePrototypes:
     - WallSolid
     - FloorSteel
     - Plating
     - Catwalk
     - Grille
-    - Window    
+    - Window
     - WindowDirectional
     - WindowReinforcedDirectional
     - ReinforcedWindow
@@ -450,7 +454,7 @@
   - type: LimitedCharges
     charges: 0
   - type: RCD
-    availablePrototypes:   
+    availablePrototypes:
     - WallSolid
     - FloorSteel
     - Plating
