add: better color parameters

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
@@ -798,7 +798,7 @@
     muzzleFlash: null
   - type: PointLight
     radius: 3.5
-    color: blue
+    color: "#164CAC"
     energy: 0.5
 
 - type: entity
@@ -1090,9 +1090,9 @@
     - 1, 0, 0, 1
     - 1, 0, 0, 0
   - type: PointLight
-    radius: 3.5
+    radius: 1.4
     color: red
-    energy: 1
+    energy: 0.7
   - type: Reflective
     reflective:
     - Energy
@@ -1166,9 +1166,9 @@
     - 1, 0, 0, 1
     - 1, 0, 0, 0
   - type: PointLight
-    radius: 3.5
+    radius: 1.4
     color: red
-    energy: 1
+    energy: 0.7
   - type: Reflective
     reflective:
     - Energy
@@ -1217,9 +1217,9 @@
     - 0, 0, 1, 1
     - 0, 0, 1, 0
   - type: PointLight
-    radius: 3.5
-    color: blue
-    energy: 1
+    radius: 1.7
+    color: "#164CAC"
+    energy: 0.7
   - type: Reflective
     reflective:
     - Energy
@@ -1267,9 +1267,9 @@
     - 1, 0, 0, 1
     - 1, 0, 0, 0
   - type: PointLight
-    radius: 3.5
+    radius: 1.9
     color: red
-    energy: 1
+    energy: 0.7
   - type: Reflective
     reflective:
     - Energy
@@ -1317,9 +1317,9 @@
     - 0, 1, 0, 1
     - 0, 1, 0, 0
   - type: PointLight
-    radius: 3.5
+    radius: 1.7
     color: green
-    energy: 1
+    energy: 0.7
   - type: Reflective
     reflective:
     - Energy
@@ -1367,9 +1367,9 @@
     - 1, 0, 0, 1
     - 1, 0, 0, 0
   - type: PointLight
-    radius: 3.5
+    radius: 1.7
     color: red
-    energy: 1
+    energy: 0.7
   - type: Reflective
     reflective:
     - Energy
