- add: Flash protection for wiz hardsuit helmet.

--- a/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -546,6 +546,8 @@
         Piercing: 0.9
         Heat: 0.9
   - type: WizardClothes
+  - type: FlashImmunity
+  - type: EyeProtection
 
 #Organic Space Suit
 - type: entity
