--- a/Resources/Prototypes/Damage/modifier_sets.yml
+++ b/Resources/Prototypes/Damage/modifier_sets.yml
@@ -15,7 +15,7 @@
     Blunt: 0.5
     Slash: 0.5
     Piercing: 0.5
-    Shock: 1.2
+    Shock: 0 # for lightning explosions
     Structural: 0.5
   flatReductions:
     Blunt: 10
@@ -26,7 +26,7 @@
 - type: damageModifierSet
   id: StructuralMetallic
   coefficients:
-    Shock: 1.2
+    Shock: 0 # for lightning explosions
     Heat: 1.2
   flatReductions:
     Blunt: 10
@@ -42,6 +42,7 @@
     Slash: 0.25
     Piercing: 0.75
     Heat: 0.9
+    Shock: 0 # for lightning explosions
   flatReductions:
     Blunt: 5
 
@@ -50,7 +51,7 @@
   coefficients:
     Blunt: 2
     Piercing: 0.2
-    Shock: 0.6
+    Shock: 0 # for lightning explosions
   flatReductions:
     Piercing: 10
 
