--- a/Resources/Prototypes/explosion.yml
+++ b/Resources/Prototypes/explosion.yml
@@ -150,3 +150,15 @@
   fireColor: Green
   texturePath: /Textures/Effects/fire_greyscale.rsi
   fireStates: 3
+
+- type: explosion
+  id: Shock
+  damagePerIntensity:
+    types:
+      Shock: 15
+  tileBreakChance: [0]
+  tileBreakIntensity: [0]
+  lightColor: Cyan
+  fireColor: Cyan
+  texturePath: /Textures/Effects/fire_greyscale.rsi
+  fireStates: 3
