- add: Improve arc.

--- a/Resources/Prototypes/explosion.yml
+++ b/Resources/Prototypes/explosion.yml
@@ -158,8 +158,8 @@
       Shock: 15
   tileBreakChance: [0]
   tileBreakIntensity: [0]
-  lightColor: "#4080FF"
-  fireColor: "#4080FF"
+  lightColor: "#B3CEFF"
+  fireColor: "#B3CEFF"
   texturePath: /Textures/Effects/fire_greyscale.rsi
   fireStates: 3
   ignoreResistances: false
