--- a/Resources/Prototypes/_White/Entities/Cult/Items/blood_barrage.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Items/blood_barrage.yml
@@ -25,6 +25,8 @@
     capacity: 25
   - type: BoltBarrage
   - type: GiftIgnore
+  - type: CultItem
+    canPickUp: false
 
 - type: cultistFactoryProduction
   id: FactoryCultBloodBarrage
