--- a/Resources/Prototypes/Magic/white.yml
+++ b/Resources/Prototypes/Magic/white.yml
@@ -361,3 +361,19 @@
       event: !type:StopTimeSpellEvent
         prototype: Timestop
         speech: "TOKI YO TOMARE!"
+
+- type: entity
+  id: ActionArcaneBarrageSpell
+  name: Arcane barrage
+  noSpawn: true
+  components:
+    - type: Magic
+      requiresClothes: true
+    - type: InstantAction
+      useDelay: 75
+      itemIconStyle: BigAction
+      icon:
+        sprite: Objects/Magic/magicactions.rsi
+        state: arcane_barrage
+      event: !type:ArcaneBarrageSpellEvent
+        prototype: ArcaneBarrage
