--- a/Resources/Prototypes/_White/Wizard/spellbook_catalog.yml
+++ b/Resources/Prototypes/_White/Wizard/spellbook_catalog.yml
@@ -111,6 +111,22 @@
     stock: 1
 
 - type: listing
+  id: SpellBookArcaneBarrage
+  name: spellbook-barrage-name
+  description: spellbook-barrage-desc
+  icon:
+    sprite: Objects/Magic/magicactions.rsi
+    state: arcane_barrage
+  productEntity: ScrollArcaneBarrage
+  cost:
+    SpellPoint: 2
+  categories:
+  - AttackSpells
+  conditions:
+  - !type:ListingLimitedStockCondition
+    stock: 1
+
+- type: listing
   id: SpellBookBlink
   name: spellbook-blink-name
   description: spellbook-blink-desc
