Add "Structure" tag to switches, buttons, and levers (#29378) shit Co-authored-by: Eoin Mcloughlin <helloworld@eoinrul.es>

--- a/Resources/Prototypes/Entities/Structures/Wallmounts/switch.yml
+++ b/Resources/Prototypes/Entities/Structures/Wallmounts/switch.yml
@@ -32,7 +32,9 @@
                 collection: MetalBreak
     - type: UseDelay
       delay: 0.2 # prevent light-toggling auto-clickers.
-# WD edit start
+    - type: Tag
+      tags:
+      - Structure
 
 - type: entity
   id: SignalSwitch
