add: fixed wrong item rotation in inventory

--- a/Resources/Prototypes/Entities/White/voice_recorder.yml
+++ b/Resources/Prototypes/Entities/White/voice_recorder.yml
@@ -17,6 +17,7 @@
     - type: Item
       heldPrefix: off
       sprite: White/VoiceRecorder/voicerecorder.rsi
+      storedRotation: 90
     - type: Appearance
     - type: VoiceRecorder
       blacklist:
