--- a/Resources/Prototypes/Entities/Objects/Specific/syndicate.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/syndicate.yml
@@ -64,6 +64,7 @@
   - type: Item
     sprite: Objects/Devices/communication.rsi
     heldPrefix: old-radio
+    storedRotation: 90
   - type: UserInterface
     interfaces:
     - key: enum.StoreUiKey.Key
