--- a/Resources/Prototypes/Catalog/Fills/Boxes/general.yml
+++ b/Resources/Prototypes/Catalog/Fills/Boxes/general.yml
@@ -5,9 +5,9 @@
   description: A cardboard box for storing things.
   components:
   - type: Item
-    size: Large
-    shape: 
-    - 0,0,2,2
+    size: Normal
+    shape:
+    - 0,0,1,1
   - type: Storage
     maxItemSize: Small
     grid:
