--- a/Resources/Prototypes/Entities/Objects/Power/powercells.yml
+++ b/Resources/Prototypes/Entities/Objects/Power/powercells.yml
@@ -4,7 +4,7 @@
   parent: BaseItem
   components:
   - type: Item
-    storedRotation: -90
+    size: Tiny
   - type: Battery
     pricePerJoule: 0.15
   - type: PowerCell
@@ -291,7 +291,7 @@
   parent: BasePowerCell
   components:
   - type: Item
-    size: Ginormous
+    size: Huge
   - type: MultiHandedItem
   - type: SolutionContainerManager
     solutions:
