--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Launchers/launchers.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Launchers/launchers.yml
@@ -13,6 +13,8 @@
     - Back
   - type: Item
     size: Huge
+    shape:
+    - 0,0,5,1
   - type: StaticPrice
     price: 500
   - type: ContainerContainer
