--- a/Resources/Prototypes/Entities/Mobs/NPCs/miscellaneous.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/miscellaneous.yml
@@ -1,7 +1,7 @@
 - type: entity
   name: laser raptor
   id: MobLaserRaptor
-  parent: SimpleMobBase
+  parent: SimpleSpaceMobBase
   description: From the Viking age.
   components:
     - type: NpcFactionMember
@@ -36,7 +36,7 @@
     - type: MobThresholds
       thresholds:
         0: Alive
-        100: Dead
+        50: Dead
     - type: MovementSpeedModifier
       baseWalkSpeed: 2
       baseSprintSpeed: 5
