--- a/Resources/Prototypes/Entities/Mobs/NPCs/revenant.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/revenant.yml
@@ -93,3 +93,5 @@
     - RevenantTheme
   - type: Speech
     speechVerb: Ghost
+  - type: GlobalAntagonist
+    antagonistPrototype: globalAntagonistRevenant
