--- a/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
@@ -154,6 +154,8 @@
   - type: GuideHelp
     guides:
     - MinorAntagonists
+  - type: GlobalAntagonist
+    antagonistPrototype: globalAntagonistDragon
 
 - type: entity
   parent: BaseMobDragon
