--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -1,7 +1,9 @@
 - type: department
   id: Command
+  name: department-Command
   description: department-Command-description
   color: "#334E6D"
+  weight: 200
   roles:
   - CentralCommandOfficial
   - Captain
@@ -13,13 +15,14 @@
   - Quartermaster
   - Inspector
   primary: false
-  weight: 100
+  buttonStyle: ButtonColorCommandDepartment
 
 - type: department
   id: Security
+  name: department-Security
   description: department-Security-description
   color: "#DE3A3A"
-  weight: 20
+  weight: 180
   roles:
   - HeadOfSecurity
   - Warden
@@ -27,21 +30,80 @@
   - SecurityOfficer
   - Detective
   - SecurityCadet
+  buttonStyle: ButtonColorSecurityDepartment
+
+- type: department
+  id: Justice
+  name: department-Justice
+  description: department-Justice-description
+  weight: 160
+  color: "#710d00"
+  roles:
+  - Inspector
+  - Lawyer
+  buttonStyle: ButtonColorJusticeDepartment
+
+- type: department
+  id: Medical
+  name: department-Medical
+  description: department-Medical-description
+  color: "#52B4E9"
+  weight: 140
+  roles:
+  - ChiefMedicalOfficer
+  - SeniorPhysician
+  - MedicalDoctor
+  - Paramedic
+  - Chemist
+  - MedicalIntern
+  - Psychologist
+  buttonStyle: ButtonColorMedicalDepartment
+
+- type: department
+  id: Engineering
+  name: department-Engineering
+  description: department-Engineering-description
+  color: "#EFB341"
+  weight: 120
+  roles:
+  - ChiefEngineer
+  - SeniorEngineer
+  - AtmosphericTechnician
+  - StationEngineer
+  - TechnicalAssistant
+  buttonStyle: ButtonColorEngineeringDepartment
+
+- type: department
+  id: Science
+  name: department-Science
+  description: department-Science-description
+  color: "#D381C9"
+  weight: 100
+  roles:
+  - ResearchDirector
+  - SeniorResearcher
+  - Scientist
+  - ResearchAssistant
+  buttonStyle: ButtonColorScienceDepartment
 
 - type: department
   id: Cargo
+  name: department-Cargo
   description: department-Cargo-description
   color: "#A46106"
+  weight: 80
   roles:
   - Quartermaster
   - CargoTechnician
   - SalvageSpecialist
+  buttonStyle: ButtonColorCargoDepartment
 
 - type: department
   id: Civilian
+  name: department-Civilian
   description: department-Civilian-description
   color: "#9FED58"
-  weight: -10
+  weight: 60
   roles:
   - HeadOfPersonnel
   - Borg
@@ -60,57 +122,18 @@
   - Visitor
   - Zookeeper
   - Passenger
-
-- type: department
-  id: Engineering
-  description: department-Engineering-description
-  color: "#EFB341"
-  roles:
-  - ChiefEngineer
-  - SeniorEngineer
-  - AtmosphericTechnician
-  - StationEngineer
-  - TechnicalAssistant
-
-- type: department
-  id: Medical
-  description: department-Medical-description
-  color: "#52B4E9"
-  roles:
-  - ChiefMedicalOfficer
-  - SeniorPhysician
-  - MedicalDoctor
-  - Paramedic
-  - Chemist
-  - MedicalIntern
-  - Psychologist
-
-- type: department
-  id: Science
-  description: department-Science-description
-  color: "#D381C9"
-  roles:
-  - ResearchDirector
-  - SeniorResearcher
-  - Scientist
-  - ResearchAssistant
+  buttonStyle: ButtonColorCivilianDepartment
 
 - type: department
   id: Specific
+  name: department-Specific
   description: department-Specific-description
   color: "#9FED58"
-  weight: 10
+  weight: 0
   roles:
   - Boxer
   - Reporter
   - Zookeeper
   - Psychologist
   primary: false
-
-- type: department
-  id: Justice
-  description: department-Justice-description
-  color: "#710d00"
-  roles:
-  - Inspector
-  - Lawyer
+  buttonStyle: ButtonColorSpecificDepartment
