rework: item size rework part 2

--- a/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
@@ -548,7 +548,9 @@
   - type: Clothing
     sprite: Clothing/Belt/sheath.rsi
   - type: Item
-    size: Ginormous
+    size: Huge
+    shape:
+    - 0, 0, 4, 0
   - type: ItemSlots
     slots:
       item:
