--- a/Resources/Prototypes/Entities/Objects/Misc/dat_fukken_disk.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/dat_fukken_disk.yml
@@ -21,6 +21,8 @@
   - type: Sprite
     sprite: Objects/Misc/nukedisk.rsi
     state: icon
+  - type: Item
+    size: Tiny
   - type: StaticPrice
     price: 2000
   - type: CargoSellBlacklist
