--- a/Resources/Prototypes/Entities/Clothing/Neck/ties.yml
+++ b/Resources/Prototypes/Entities/Clothing/Neck/ties.yml
@@ -1,5 +1,15 @@
 - type: entity
   parent: ClothingNeckBase
+  id: ClothingNeckTieBase
+  abstract: true
+  name: red-tie
+  description: A neosilk clip-on red tie.
+  components:
+  - type: Item
+    storedRotation: 135
+
+- type: entity
+  parent: ClothingNeckTieBase
   id: ClothingNeckTieRed
   name: red-tie
   description: A neosilk clip-on red tie.
@@ -15,7 +25,7 @@
     - ClothMade
 
 - type: entity
-  parent: ClothingNeckBase
+  parent: ClothingNeckTieBase
   id: ClothingNeckTieDet
   name: detective's tie
   description: A loosely tied necktie, a perfect accessory for the over-worked detective.
@@ -24,9 +34,9 @@
     sprite: Clothing/Neck/Ties/dettie.rsi
   - type: Clothing
     sprite: Clothing/Neck/Ties/dettie.rsi
-    
+
 - type: entity
-  parent: ClothingNeckBase
+  parent: ClothingNeckTieBase
   id: ClothingNeckTieSci
   name: scientist's tie
   description: Why do we all have to wear these ridiculous ties?
