--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/suits.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/suits.yml
@@ -74,6 +74,8 @@
       sprite: Clothing/OuterClothing/Suits/atmos_firesuit.rsi
     - type: Clothing
       sprite: Clothing/OuterClothing/Suits/atmos_firesuit.rsi
+    - type: Item
+      storedRotation: -90
     - type: PressureProtection
       highPressureMultiplier: 0.02
       lowPressureMultiplier: 1000
