--- a/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/tools.yml
@@ -19,6 +19,7 @@
         Slash: 10
   - type: Item
     sprite: Objects/Tools/Hydroponics/hoe.rsi
+    storedRotation: 45
 
 - type: entity
   name: plant clippers
@@ -108,6 +109,7 @@
         Piercing: 5 # I guess you can stab it into them?
   - type: Item
     sprite: Objects/Tools/Hydroponics/spade.rsi
+    storedRotation: 135
   - type: Shovel
     speedModifier: 0.75 # slower at digging than a full-sized shovel
 
