--- a/Resources/Prototypes/Entities/Objects/Tools/spray_painter.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/spray_painter.yml
@@ -9,6 +9,7 @@
     state: spray_painter
   - type: Item
     sprite: Objects/Tools/spray_painter.rsi
+    storedRotation: -90
   - type: ActivatableUI
     key: enum.SprayPainterUiKey.Key
   - type: UserInterface
