add: blood loss accent rework

--- a/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
@@ -56,6 +56,7 @@
     - KnockedDown
     - SlowedDown
     - Stutter
+    - BloodLoss
     - Electrocution
   - type: NameIdentifier
     group: GenericNumber
