--- a/Resources/Prototypes/Entities/Mobs/NPCs/simplemob.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/simplemob.yml
@@ -21,6 +21,7 @@
     allowed:
     - SlowedDown
     - Stutter
+    - BloodLoss
     - Electrocution
     - ForcedSleep
     - TemporaryBlindness
@@ -97,6 +98,7 @@
       - KnockedDown
       - SlowedDown
       - Stutter
+      - BloodLoss
       - Electrocution
       - ForcedSleep
       - TemporaryBlindness
