fix: fix rd suit size

--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
@@ -421,7 +421,7 @@
     sprintModifier: 0.8
   - type: HeldSpeedModifier
   - type: Item
-    size: Normal
+    size: Huge
   - type: Tag
     tags:
     - WhitelistChameleon
