--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/LMGs/lmgs.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/LMGs/lmgs.yml
@@ -90,7 +90,7 @@
     sprite: White/Objects/Weapons/Guns/LMGs/l6-inhands.rsi
   - type: MagazineVisuals
     magState: mag
-    steps: 4
+    steps: 5
     zeroVisible: true
   - type: Appearance
 
@@ -140,3 +140,8 @@
       autoRecharge: true
       autoRechargeRate: 25
     - type: AmmoCounter
+    - type: MagazineVisuals
+      magState: mag
+      steps: 5
+      zeroVisible: true
+    - type: Appearance
