--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Shotguns/shotguns.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Shotguns/shotguns.yml
@@ -10,7 +10,6 @@
     - state: icon
       map: [ "enum.GunVisualLayers.Base" ]
   - type: Item
-    # If you update this also update the bulldog's size.
     size: Large
   - type: Clothing
     sprite: Objects/Weapons/Guns/Shotguns/db_shotgun.rsi
@@ -52,6 +51,7 @@
   - type: EmitSoundOnLand
     sound:
       collection: ShotgunsDrop
+  - type: Appearance
 
 
 - type: entity
@@ -126,7 +126,6 @@
     shape:
     - 0,0,4,0
     sprite: White/Objects/Weapons/Guns/Shotguns/db_shotgun-inhands.rsi
-    heldPrefix: db
   - type: Gun
     fireRate: 2
   - type: BallisticAmmoProvider
@@ -159,7 +158,6 @@
     sprite: White/Objects/Weapons/Guns/Shotguns/enforcer-inhands.rsi
   - type: Item
     sprite: White/Objects/Weapons/Guns/Shotguns/enforcer-inhands.rsi
-    heldPrefix: enforcer
   - type: BallisticAmmoProvider
 
 - type: entity
@@ -177,11 +175,10 @@
   description: When an old Remington design meets modern materials, this is the result. A favourite weapon of militia forces throughout many worlds. Uses .50 shotgun shells.
   components:
   - type: Item
+    sprite: White/Objects/Weapons/Guns/Shotguns/pump-inhands.rsi
     size: Normal
     shape:
     - 0,0,4,0
-    sprite: White/Objects/Weapons/Guns/Shotguns/pump-inhands.rsi
-    heldPrefix: pump
   - type: Sprite
     sprite: White/Objects/Weapons/Guns/Shotguns/pump-icons.rsi
   - type: Clothing
@@ -289,7 +286,6 @@
     shape:
     - 0,0,4,0
     sprite: White/Objects/Weapons/Guns/Shotguns/improvised_shotgun-inhands.rsi
-    heldPrefix: improvised
   - type: Gun
     fireRate: 4 #No reason to stifle the firerate since you have to manually reload every time anyways.
   - type: BallisticAmmoProvider
